--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 
 <body>
   <div class="container">
-    <h3>News Category Prediction</h3>
+    <!-- <h3>News Category Prediction</h3> -->
     <div class="row" id = "message">
+        <div class="col-4 bg-dark"><p class="font-weight-bold text-white">News Category</p> </div>
+        <div class="col-8 bg-dark"><p class="font-weight-bold text-white">News</p></div>
+            <!-- var categorydiv = $("<div>").addClass("col-4") -->
        <!-- <div class="col-4">.col-4</div>
       <div class="col-4">.col-4</div>
       <div class="col-4">.col-4</div> -->
